fix overflow hidden

--- a/Signum.React/Scripts/Frames/Frames.css
+++ b/Signum.React/Scripts/Frames/Frames.css
@@ -76,6 +76,10 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
+.modal-title{
+    overflow: hidden;
+}
+
 .sf-entity-title {
     font-size: 2rem;
     font-weight: 300;
